# frdm-fighter-25z

./: CMakeLists.txt  README.md  main.cpp
bsp/: CMakeLists.txt
bsp/CMSIS/: CMakeLists.txt
bsp/board/: CMakeLists.txt  board.h  pin_mux.c
bsp/drivers/: CMakeLists.txt
bsp/startup/: CMakeLists.txt
bsp/utilities/: CMakeLists.txt
cmake/: ArmCompileLink.cmake
libfcn/: CMakeLists.txt  syscalls.c
linker/: autogen_linker.ld
src/: clock.cpp  clock.h  led.cpp  led.h  main.cpp
